# ccpnc-oasis-app

./: .cruft.json  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/ccpnc_oasis_app/apps/: __init__.py
tests/apps/: test_app.py
tutorial/: tutorial.html
